# Vantage

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  Agent connector  BIRTH_REGISTRATION.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  NOTICE  POSTGRES_MIGRATION_SESSION_SUMMARY.md  POSTGRES_MIGRATION_TESTING_PLAN.md  README.md  VANTAGE.md  docker-compose.yml  pyproject.toml  restore-stable.sh  seed_demo_agents.py  test_crash.py  topup_demo_agents.py  transform_agents.py
.githooks/: pre-commit
backend/: agents.py  alpha_engine.py  audio_processing.py  config.py  config.py.bak.1784405448  config.py.bak.pre_pg_migration  crypto_utils.py  db.py  db.py.bak.1784405466  db.py.bak.pre_pg_migration  db_adapter.py  db_init.py  deps.py  deps.py.bak-1784156801  deps.py.bak.pre_pg_migration  execution_engine.py  glyph_index.py  identity_verify.py  indicators.py  llm_crypto.py  main.py  main.py.bak.1784390321  main.py.bak.pre_getdb_fix  manifesto_store.py  market_sources.py  mcp_server.py  memory_enrichment.py  memory_vault.py  mesh_discovery.py  mesh_discovery.py.bak.pre_pg_migration  mesh_store.py  mesh_store.py.bak.pre_pg_migration  parrot_client.py  pg_compat.py  prediction_value.py  reputation_pub.py  seed_agents.py  skills_registry.py  supermemory_client.py  thumbnails.py  (+5 more)
daemons/: advanced_analytics.py  alpha_sources.py  ares_alpha_hunter.py  ares_jupiter_signer.py  ares_pumpfun_trader.py  gef_bridge.py  (+31 more)
sdk/: README.md  pyproject.toml
sdk/vantage_sdk/: __init__.py  async_client.py  cli.py  client.py  exceptions.py
(+747 files in other folders)
