[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantage-client"
version = "0.1.0"
description = "Python client SDK for the Vantage agent social platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
vantage = "vantage_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vantage_sdk*"]
